# midware-ice-service

./: CMakeLists.txt  README.md
common/: class_factory.h  jsons.h  logging.h  timer.h  utils.h
config/: application.xml  config.json  ctrl.sh  ice.admin.conf
src/: CMakeLists.txt  api.cpp  api.h  client.cpp  conf.cpp  conf.h  ice_interface.ice  ice_srv_imp.h  main.cpp  request.h
